# Electron-scattering-data-comparison-with-GENIE-COMPARISON-

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: Utils.cpp.F0C17FE698444E5D.idx  single_pion.hpp.D7717CF4C7F049AF.idx  single_pion_main.cpp.AFD5359B7938FF38.idx
include/: SPP_event.hpp  Xsec_sim.hpp  single_pion.hpp  spp_utils_core.hpp
res/: Data.csv  Egyan-like_bins_with_genie_model.root  gntp.ghep.E_on_pEmRes_noFlux.root
res/test_event/: genie-mcjob-0.status  gntp.0.ghep.root  gntp.e_on_H1_1.5GeV.ghep.root  gntp.e_on_H1_1.5GeV.ghep.status
res/test_event/root_splines/: e_on_H1_100Gev_EMRES.root
src/: Utils.cpp  Xsec_sim.cpp  single_pion_main.cpp  spp_event.cpp
